# puls-events-chatbot

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  launcher.ps1  pyproject.toml  requirements.txt
.github/workflows/: ragas_ci.yml
evaluation/: evaluate_rag.py  test_cases.json
scripts/: run_coverage.ps1  run_ragas.ps1
src/puls_events_chatbot/: __init__.py  gradio_interface.py  main.py
src/puls_events_chatbot/.github/workflows/: ragas_ci.yml
src/puls_events_chatbot/controllers/: chatbot_controller.py
src/puls_events_chatbot/models/: ask_schema.py
src/puls_events_chatbot/notebook/: notebook.ipynb
src/puls_events_chatbot/services/: chatbot.py  fetch_data.py
tests/: api_test.py  evaluate_rag.py  gradio_test.py
