[project]
name = "puls-events-chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "MarieSainte",email = "msjordan.pro@gmail.com"}
]
package-mode = false
readme = "README.md"
requires-python = "<3.15,>=3.10.0"
dependencies = [
    "fastapi (>=0.121.1,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "gradio (>=5.49.1,<6.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "mistralai (>=1.9.11,<2.0.0)",
    "notebook (>=7.4.7,<8.0.0)",
    "faiss-cpu (>=1.12.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain (>=1.0.7,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-mistralai (>=1.0.1,<2.0.0)",
    "ragas (>=0.3.9,<0.4.0)",
    "langchain-huggingface (>=1.0.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "puls_events_chatbot", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
